apps/website/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gluk0
  labels:
    istio-injection: enabled
    name: gluk0
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
